luotiin pelilauta ja aloitettiin pelaajaa

--- a/public/style.css
+++ b/public/style.css
@@ -80,3 +80,8 @@ button{
     background-image: url('images/Image20250122162543.png');
     background-size: cover;
 }
+
+.player{
+    background-image: url('images/Image20250122162558.png');
+    background-size: cover;
+}
